Fixed some bug and removed 1 toast message
There was a bug when you submit a quiz and a simple toast which contained tou answers and your mark. I replaced that toast with a alert dialog.

--- a/PythonGuru/app/src/main/res/layout/activity_main_menu.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_main_menu.xml
@@ -77,5 +77,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/helpBtn" android:background="@color/colorPrimary"
                 android:textColor="@android:color/white"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView132"/>
+        <Button
+                android:text="@string/logout_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/logout_button"
+                android:background="@color/colorPrimary"
+                android:textColor="@android:color/white"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
