--- a/PythonGuru/app/src/main/res/layout/activity_final_quiz.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_final_quiz.xml
@@ -8,8 +8,8 @@
         tools:context=".FinalQuizActivity" android:background="@color/colorPrimaryDark">
 
     <ScrollView
-            android:layout_width="395dp"
-            android:layout_height="688dp"
+            android:layout_width="381dp"
+            android:layout_height="686dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent">
@@ -56,7 +56,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/finalQuizView"
-                    tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="307dp"/>
+                    tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="307dp"
+                    android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView242"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq1"
