--- a/PythonGuru/app/src/main/res/layout/activity_new_question.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_new_question.xml
@@ -49,7 +49,7 @@
                     android:layout_height="wrap_content" android:id="@+id/textView208"/>
             <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView209"/>
+                    android:layout_height="wrap_content" android:id="@+id/textView291"/>
             <TextView
                     android:text="@string/question_body_field"
                     android:layout_width="match_parent"
@@ -57,7 +57,10 @@
                     android:textColor="@android:color/white"/>
             <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView216"/>
+                    android:layout_height="wrap_content" android:id="@+id/textView287"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView286"/>
             <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
