--- a/PythonGuru/app/src/main/res/layout/activity_answer.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_answer.xml
@@ -7,30 +7,52 @@
         android:layout_height="match_parent"
         tools:context=".AnswerActivity" android:background="@color/colorPrimaryDark">
 
-    <TextView
-            android:text="@string/choose_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/currQuestion" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintVertical_bias="0.033" android:textColor="@android:color/white"/>
-    <RadioGroup
-            android:layout_width="357dp"
-            android:layout_height="180dp"
-            android:background="@color/colorPrimary" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.198">
-        <RadioButton
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView209"/>
+        <TextView
+                android:text="@string/choose_txt"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/choice1" android:layout_weight="1"/>
-        <RadioButton
+                android:layout_height="wrap_content"
+                android:id="@+id/currQuestion" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintVertical_bias="0.033" android:textColor="@android:color/white"/>
+        <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/choice2" android:layout_weight="1"/>
-        <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/choice3" android:layout_weight="1"/>
-    </RadioGroup>
+                android:layout_height="wrap_content"
+                android:id="@+id/selectedChoice" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/choiceGroup" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintVertical_bias="0.067"/>
+        <RadioGroup
+                android:layout_width="357dp"
+                android:layout_height="180dp"
+                android:background="@color/colorPrimary" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.198"
+                android:id="@+id/choiceGroup">
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/choice1" android:layout_weight="1"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/choice2" android:layout_weight="1"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/choice3" android:layout_weight="1"/>
+        </RadioGroup>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
