--- a/PythonGuru/app/src/main/res/layout/activity_progress.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_progress.xml
@@ -22,6 +22,18 @@
                 app:layout_constraintBottom_toBottomOf="parent">
             <TextView
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView292"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView290"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView289"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView288"/>
+            <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/textView149"/>
             <TextView
                     android:layout_width="match_parent"
@@ -37,38 +49,30 @@
                     android:layout_height="wrap_content" android:id="@+id/textView134"/>
             <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView13"/>
-            <TextView
-                    android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/textView12"/>
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/textView11"/>
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView10"/>
-            <TextView
                     android:text="@string/your_progress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView8" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.079"
-                    android:textColor="@android:color/white"/>
+                    android:id="@+id/textView8"
+                    android:textColor="@android:color/white" tools:layout_editor_absoluteY="665dp"
+                    tools:layout_editor_absoluteX="316dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView10"/>
             <TextView
                     android:text="@string/marksColText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/marksColumn"
-                    android:textColor="@android:color/white" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.146"
-                    app:layout_constraintVertical_bias="0.153"/>
+                    android:textColor="@android:color/white"
+                    tools:layout_editor_absoluteX="365dp" tools:layout_editor_absoluteY="8dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView13"/>
             <TextView
                     android:text="@string/mark_1"
                     android:layout_width="wrap_content"
