--- a/PythonGuru/app/src/main/res/layout/activity_teacher_login.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_teacher_login.xml
@@ -100,5 +100,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/teacherRegister"
                 android:textColor="@android:color/white"/>
+        <TextView
+                android:text="@string/back_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/backTxt"
+                android:textColor="@android:color/white"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
